fix git-review details